[gd_scene load_steps=10 format=3 uid="uid://bf74mxp6eobj7"]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1_nk2n8"]
[ext_resource type="PackedScene" uid="uid://ce465tmrrukmt" path="res://scenes/card_place.tscn" id="2_kfu8g"]
[ext_resource type="Texture2D" uid="uid://dtddgnsc00sxx" path="res://sprites/shop_desk.png" id="2_lcwta"]
[ext_resource type="Texture2D" uid="uid://chxyejk3e8l72" path="res://sprites/card_back_template.png" id="3_ajps5"]
[ext_resource type="PackedScene" uid="uid://c1ltxtwfc7hjp" path="res://scenes/jokers.tscn" id="4_7k8mn"]
[ext_resource type="FontFile" uid="uid://c8e3cq3afba0d" path="res://minecraft/Minecraft.ttf" id="6_5hdlj"]
[ext_resource type="Texture2D" uid="uid://8g7ulp4awkgd" path="res://sprites/coin.png" id="7_vfk6f"]

[sub_resource type="LabelSettings" id="LabelSettings_sl2fx"]
font = ExtResource("6_5hdlj")

[sub_resource type="LabelSettings" id="LabelSettings_ebq5h"]
font = ExtResource("6_5hdlj")
font_color = Color(0.73552, 0.735228, 1.54018e-06, 1)

[node name="Shop" type="Node2D"]
script = ExtResource("1_nk2n8")

[node name="desk" type="Sprite2D" parent="."]
position = Vector2(320, 180)
texture = ExtResource("2_lcwta")

[node name="card_back_1" type="Sprite2D" parent="."]
position = Vector2(531, 108)
rotation = 0.0349066
texture = ExtResource("3_ajps5")

[node name="card_back_2" type="Sprite2D" parent="."]
position = Vector2(531, 109)
texture = ExtResource("3_ajps5")

[node name="card_back_3" type="Sprite2D" parent="."]
position = Vector2(529, 107)
rotation = 0.0349066
texture = ExtResource("3_ajps5")

[node name="card_back_4" type="Sprite2D" parent="."]
position = Vector2(529, 110)
rotation = -0.0698132
texture = ExtResource("3_ajps5")

[node name="card_back_5" type="Sprite2D" parent="."]
position = Vector2(527, 108)
texture = ExtResource("3_ajps5")

[node name="Button" type="Button" parent="."]
anchors_preset = -1
anchor_top = 6.175
anchor_right = 8.55
anchor_bottom = 6.175
offset_left = 454.0
offset_top = 307.0
offset_right = 624.0
offset_bottom = 347.0
text = "next"

[node name="exacuviate" type="Button" parent="."]
offset_left = 490.0
offset_top = 147.0
offset_right = 577.0
offset_bottom = 201.0
text = "exacuvate
cards
"

[node name="spawnpoints" type="Node2D" parent="."]

[node name="CardPlace1" parent="spawnpoints" instance=ExtResource("2_kfu8g")]
z_index = 10
position = Vector2(67, 109)

[node name="CardPlace2" parent="spawnpoints" instance=ExtResource("2_kfu8g")]
z_index = 10
position = Vector2(118, 109)

[node name="CardPlace3" parent="spawnpoints" instance=ExtResource("2_kfu8g")]
z_index = 10
position = Vector2(169, 109)

[node name="CardPlace4" parent="spawnpoints" instance=ExtResource("2_kfu8g")]
z_index = 10
position = Vector2(220, 109)

[node name="CardPlace5" parent="spawnpoints" instance=ExtResource("2_kfu8g")]
z_index = 10
position = Vector2(271, 109)

[node name="CardPlace6" parent="spawnpoints" instance=ExtResource("2_kfu8g")]
z_index = 10
position = Vector2(322, 109)

[node name="CardPlace7" parent="spawnpoints" instance=ExtResource("2_kfu8g")]
z_index = 10
position = Vector2(373, 109)

[node name="CardPlace8" parent="spawnpoints" instance=ExtResource("2_kfu8g")]
z_index = 10
position = Vector2(424, 109)

[node name="Jokers" parent="." instance=ExtResource("4_7k8mn")]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = -0.012
anchor_top = -0.017
anchor_right = -0.012
anchor_bottom = -0.017
offset_left = 41.0
offset_top = 163.0
offset_right = 296.0
offset_bottom = 286.0
color = Color(0, 0, 0, 0.588235)

[node name="joker_effect_label" type="Label" parent="ColorRect"]
z_index = 10
offset_left = 8.0
offset_top = 1.0
offset_right = 247.0
offset_bottom = 119.0
text = "Hower a card to see its joker effect"
label_settings = SubResource("LabelSettings_sl2fx")
autowrap_mode = 3

[node name="gold_ammount_label" type="Label" parent="."]
offset_left = 484.0
offset_top = 22.0
offset_right = 525.0
offset_bottom = 58.0
text = "0"
label_settings = SubResource("LabelSettings_ebq5h")
horizontal_alignment = 2

[node name="coin" type="Sprite2D" parent="gold_ammount_label"]
position = Vector2(56, 7)
texture = ExtResource("7_vfk6f")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="exacuviate" to="." method="_on_exacuviate_pressed"]
